[package]
name = "pymermaider"
version = "0.1.4"
edition = "2021"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "color"] }
ignore = { version = "0.4.25", features = ["simd-accel"] }
itertools = "0.14.0"
log = "0.4.28"
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.0" }
ruff_python_codegen = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.0" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.0" }
ruff_python_semantic = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.0" }
ruff_python_stdlib = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.0" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.0" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.0" }
ruff_linter = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.0" }
globset = "0.4.18"

[dev-dependencies]
tempfile = "3.23.0"
anyhow = "1.0.100"
ctor = "0.6.1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
