[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pymermaider"
version = "0.1.0"
description = "Mermaid diagram generator for Python code."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"

[project.urls]
Repository = "https://github.com/diceroll123/pymermaider"

[tool.maturin]
bindings = "bin"
strip = true
module-name = "pymermaider"
python-source = "python"
